--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -2,8 +2,8 @@
 # about using actions within workflows.
 
 name: 04 - Using Actions
-on: push
-#on: workflow_dispatch
+#on: push
+on: workflow_dispatch
 
 jobs:
   build:
