--- a/.github/workflows/09-function.yaml
+++ b/.github/workflows/09-function.yaml
@@ -1,6 +1,6 @@
 # See 09-functions/README.md for more information
 # about using functions in workflows, as well as
-# commonly used functions and their features.
+# commonly used functions and their features..
 
 name: 09 - Using Functions
 
