--- a/.github/workflows/09-function.yaml
+++ b/.github/workflows/09-function.yaml
@@ -4,9 +4,9 @@
 
 name: 09 - Using Functions
 
-on:
+on: workflow_dispatch
   #pull_request:
-  workflow_dispatch:
+  #workflow_dispatch:
 
 jobs:
   echo1:
