--- a/.github/workflows/hellow-world.yaml
+++ b/.github/workflows/hellow-world.yaml
@@ -16,7 +16,7 @@ jobs:
     goodbye:
         runs-on: ubuntu-latest
         steps:
-    #       - uses: actions/checkout@v2
+            - uses: actions/checkout@v2
             - name: goodbye
               run: ls -la
               shell: bash
